Added AST and visitors

--- a/CoreProject2024/CoreProject2024.vcxproj
+++ b/CoreProject2024/CoreProject2024.vcxproj
@@ -147,25 +147,66 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ast\AstAllocator.cpp" />
+    <ClCompile Include="ast\Declaration.cpp" />
+    <ClCompile Include="ast\declarations\FunctionDeclaration.cpp" />
+    <ClCompile Include="ast\declarations\VariableDeclaration.cpp" />
+    <ClCompile Include="ast\Expression.cpp" />
+    <ClCompile Include="ast\expressions\BinaryOperator.cpp" />
+    <ClCompile Include="ast\expressions\IdentifierValue.cpp" />
+    <ClCompile Include="ast\expressions\InvocationOperator.cpp" />
+    <ClCompile Include="ast\expressions\LiteralValue.cpp" />
+    <ClCompile Include="ast\expressions\UnaryOperator.cpp" />
+    <ClCompile Include="ast\Node.cpp" />
+    <ClCompile Include="ast\Statement.cpp" />
+    <ClCompile Include="ast\statements\ExpressionStatement.cpp" />
+    <ClCompile Include="ast\statements\ReturnStatement.cpp" />
+    <ClCompile Include="ast\statements\ScopeStatement.cpp" />
+    <ClCompile Include="ast_visitor\AstPrinter.cpp" />
     <ClCompile Include="lexer\Token.cpp" />
     <ClCompile Include="lexer\Tokenizer.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="utils\ErrorPrinter.cpp" />
+    <ClCompile Include="error\ErrorPrinter.cpp" />
+    <ClCompile Include="utf\StringUtils.cpp" />
     <ClCompile Include="utils\File.cpp" />
-    <ClCompile Include="utils\String.cpp" />
+    <ClCompile Include="utf\String.cpp" />
+    <ClCompile Include="utils\IndentPrinter.cpp" />
     <ClCompile Include="utils\TextPosition.cpp" />
-    <ClCompile Include="utils\UtfIO.cpp" />
+    <ClCompile Include="utf\UtfIO.cpp" />
+    <ClInclude Include="ast\AstAllocator.hpp" />
+    <ClInclude Include="ast\AstClassDeclarations.hpp" />
+    <ClInclude Include="ast\AstClassImplementations.hpp" />
+    <ClInclude Include="ast\Declaration.hpp" />
+    <ClInclude Include="ast\declarations\FunctionDeclaration.hpp" />
+    <ClInclude Include="ast\declarations\VariableDeclaration.hpp" />
+    <ClInclude Include="ast\Expression.hpp" />
+    <ClInclude Include="ast\expressions\BinaryOperator.hpp" />
+    <ClInclude Include="ast\expressions\IdentifierValue.hpp" />
+    <ClInclude Include="ast\expressions\InvocationOperator.hpp" />
+    <ClInclude Include="ast\expressions\LiteralValue.hpp" />
+    <ClInclude Include="ast\expressions\UnaryOperator.hpp" />
+    <ClInclude Include="ast\Node.hpp" />
+    <ClInclude Include="ast\NodeType.hpp" />
+    <ClInclude Include="ast\Statement.hpp" />
+    <ClInclude Include="ast\statements\ExpressionStatement.hpp" />
+    <ClInclude Include="ast\statements\ReturnStatement.hpp" />
+    <ClInclude Include="ast\statements\ScopeStatement.hpp" />
+    <ClInclude Include="ast_visitor\AstPrinter.hpp" />
+    <ClInclude Include="ast_visitor\AstVisitor.hpp" />
     <ClInclude Include="lexer\Token.hpp" />
     <ClInclude Include="lexer\TokenizationUtils.hpp" />
     <ClInclude Include="lexer\Tokenizer.hpp" />
+    <ClInclude Include="utf\StringUtils.hpp" />
+    <ClInclude Include="utf\UtfIterator.hpp" />
     <ClInclude Include="utils\Bit.hpp" />
     <ClInclude Include="utils\Concept.hpp" />
-    <ClInclude Include="utils\ErrorPrinter.hpp" />
+    <ClInclude Include="error\ErrorPrinter.hpp" />
     <ClInclude Include="utils\File.hpp" />
+    <ClInclude Include="utils\IndentPrinter.hpp" />
     <ClInclude Include="utils\Macro.hpp" />
-    <ClInclude Include="utils\String.hpp" />
+    <ClInclude Include="utf\String.hpp" />
     <ClInclude Include="utils\TextPosition.hpp" />
-    <ClInclude Include="utils\UtfIO.hpp" />
+    <ClInclude Include="utf\UtfIO.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="test.core" />
